--- a/comment.html
+++ b/comment.html
@@ -1,4 +1,4 @@
-<div class="comment" style="border: 2px solid {{comment.color}}">
+<div class="comment" id="{{comment.id}}" style="border: 2px solid {{comment.color}}">
     <div class="col-md-4">
         <h4> {{comment.name}}</h4>
         <h5> {{comment.city}}</h5>
