lazy load for countries

--- a/comment.html
+++ b/comment.html
@@ -1,7 +1,7 @@
 <div class="comment" id="{{comment.id}}" style="border: 2px solid {{comment.color}}">
     <div class="col-md-4">
-        <h4> {{comment.name}}</h4>
-        <h5> {{comment.city}}</h5>
+        <h4> {{comment.userName}}</h4>
+        <h5> {{comment.cityName}}</h5>
         <img ng-src="{{comment.flag}}" class="img-thumbnail"/>
     </div>
     <div class="col-md-8">
